--- a/Valores.html
+++ b/Valores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valores - Fudgy Brownies</title>
-    <link rel="stylesheet" href="valores.css">
+    <link rel="stylesheet" href="Valores.css">
 </head>
 <body>
     <header>
