--- a/Valores.html
+++ b/Valores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valores - Fudgy Brownies</title>
-    <link rel="stylesheet" href="Valores.css">
+    <link rel="stylesheet" href="valores.css">
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
         </div>
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="Miembros.html">Miembros</a>
-            <a href="Menu.html">Menú</a>
+            <a href="miembros.html">Miembros</a>
+            <a href="menu.html">Menú</a>
             <a href="valores.html">Valores</a>
         </nav>
     </header>
