--- a/Valores.html
+++ b/Valores.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="miembros.html">Miembros</a>
-            <a href="menu.html">Menú</a>
-            <a href="valores.html">Valores</a>
+            <a href="Miembros.html">Miembros</a>
+            <a href="Menu.html">Menú</a>
+            <a href="Valores.html">Valores</a>
         </nav>
     </header>
 
